force-app/main/default/objects/Opportunity/fields/Account_Link__c.field-meta.xml
<CustomField>
    <fullName>Account_Link__c</fullName>
    <formula>HYPERLINK( &quot;/&quot; &amp; CASESAFEID(AccountId), Account.Name, &quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Link</label>
    <type>Text</type>
</CustomField>