force-app/main/default/objects/Opportunity/fields/Current_Donor_Segment__c.field-meta.xml
<CustomField>
    <fullName>Current_Donor_Segment__c</fullName>
    <formula>TEXT(Account.Donor_Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Donor Cultivation Status</label>
    <type>Text</type>
</CustomField>