force-app/main/default/objects/Opportunity/fields/Current_Donor_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Donor_Status__c</fullName>
    <formula>TEXT(Account.Donor_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Donor Lifecycle Status</label>
    <type>Text</type>
</CustomField>