force-app/main/default/objects/Opportunity/fields/Current_Major_Donor_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Major_Donor_Status__c</fullName>
    <formula>TEXT(Account.Major_Donor_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Major Donor Lifecycle Status</label>
    <type>Text</type>
</CustomField>