force-app/main/default/objects/Opportunity/fields/Current_Mid_Level_Donor_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Mid_Level_Donor_Status__c</fullName>
    <formula>TEXT(Account.Mid_Level_Donor_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Mid Level Donor Status</label>
    <type>Text</type>
</CustomField>