force-app/main/default/objects/Opportunity/fields/Current_Sustainer_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Sustainer_Status__c</fullName>
    <formula>TEXT(Account.Sustainer_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Sustainer Status</label>
    <type>Text</type>
</CustomField>