force-app/main/default/objects/Opportunity/fields/Donor_Segment__c.field-meta.xml
<CustomField>
    <fullName>Donor_Segment__c</fullName>
    <label>Donor Cultivation Status at Time of Gift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Major Donor</fullName>
            </value>
            <value>
                <fullName>Lapsed Major Donor</fullName>
            </value>
            <value>
                <fullName>Extended Lapsed Major Donor</fullName>
            </value>
            <value>
                <fullName>Deep Lapsed Major Donor</fullName>
            </value>
            <value>
                <fullName>Major Donor Prospect</fullName>
            </value>
            <value>
                <fullName>Active Mid Level Donor</fullName>
            </value>
            <value>
                <fullName>Lapsed Mid Level Donor</fullName>
            </value>
            <value>
                <fullName>Extended Lapsed Mid Level Donor</fullName>
            </value>
            <value>
                <fullName>Deep Lapsed Mid Level Donor</fullName>
            </value>
            <value>
                <fullName>Mid Level Prospect</fullName>
            </value>
            <value>
                <fullName>Active Sustainer</fullName>
            </value>
            <value>
                <fullName>Lapsed Sustainer</fullName>
            </value>
            <value>
                <fullName>Former Sustainer</fullName>
            </value>
            <value>
                <fullName>Active Donor</fullName>
            </value>
            <value>
                <fullName>Lapsed Donor</fullName>
            </value>
            <value>
                <fullName>Extended Lapsed Donor</fullName>
            </value>
            <value>
                <fullName>Deep Lapsed Donor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>