force-app/main/default/objects/Opportunity/fields/Donor_Status__c.field-meta.xml
<CustomField>
    <fullName>Donor_Status__c</fullName>
    <label>Donor Lifecycle Status at Time of Gift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Segment_Status</valueSetName>
    </valueSet>
</CustomField>