force-app/main/default/objects/Opportunity/fields/Major_Donor_Status__c.field-meta.xml
<CustomField>
    <fullName>Major_Donor_Status__c</fullName>
    <label>Major Donor Status at Time of Gift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Segment_Status</valueSetName>
    </valueSet>
</CustomField>